# perplexity-seo

./: README.md  pyproject.toml  requirements.txt  sentiment.py
src/perplexity_seo/: analysis.py  app.py  cli.py
src/perplexity_seo/providers/: perplexity.py
