[project]
name = "perplexity-seo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Adrian Stritzinger", email = "adrian.stritzinger@gmail.com"},
    {name = "Shelling Chutify", email = "shelling@chutify.com"}
]
dependencies = [
    "playwright>=1.41.2",
    "askui>=0.1.11",
    "playwright-stealth>=1.0.6",
    "undetected-chromedriver>=3.5.5",
    "openai>=1.63.2",
    "streamlit>=1.42.1",
    "plotly>=6.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
